--- a/explore_zillow.ipynb
+++ b/explore_zillow.ipynb
@@ -339,11 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = wrangle.remove_outliers(df, [bathroomcnt, bedroomcnt, calculatedfinishedsquarefeet, fips, latitude, longitude, regionidcounty])"
+    "#df = wrangle.remove_outliers(df, ['bathroomcnt', 'bedroomcnt', 'calculatedfinishedsquarefeet','latitude', 'longitude'])"
    ]
   },
   {
